--- a/Aierbon.xcodeproj/xcshareddata/xcschemes/Aier360.xcscheme
+++ b/Aierbon.xcodeproj/xcshareddata/xcschemes/Aier360.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "77D6FAC41A09ADD800E06D29"
-               BuildableName = "Aier360.app"
-               BlueprintName = "Aier360"
-               ReferencedContainer = "container:Aier360.xcodeproj">
+               BuildableName = "Aierbon.app"
+               BlueprintName = "Aierbon"
+               ReferencedContainer = "container:Aierbon.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "77D6FADD1A09ADD800E06D29"
-               BuildableName = "Aier360Tests.xctest"
-               BlueprintName = "Aier360Tests"
-               ReferencedContainer = "container:Aier360.xcodeproj">
+               BuildableName = "AierbonTests.xctest"
+               BlueprintName = "AierbonTests"
+               ReferencedContainer = "container:Aierbon.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "77D6FADD1A09ADD800E06D29"
-               BuildableName = "Aier360Tests.xctest"
-               BlueprintName = "Aier360Tests"
-               ReferencedContainer = "container:Aier360.xcodeproj">
+               BuildableName = "AierbonTests.xctest"
+               BlueprintName = "AierbonTests"
+               ReferencedContainer = "container:Aierbon.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77D6FAC41A09ADD800E06D29"
-            BuildableName = "Aier360.app"
-            BlueprintName = "Aier360"
-            ReferencedContainer = "container:Aier360.xcodeproj">
+            BuildableName = "Aierbon.app"
+            BlueprintName = "Aierbon"
+            ReferencedContainer = "container:Aierbon.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -76,9 +76,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77D6FAC41A09ADD800E06D29"
-            BuildableName = "Aier360.app"
-            BlueprintName = "Aier360"
-            ReferencedContainer = "container:Aier360.xcodeproj">
+            BuildableName = "Aierbon.app"
+            BlueprintName = "Aierbon"
+            ReferencedContainer = "container:Aierbon.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "77D6FAC41A09ADD800E06D29"
-            BuildableName = "Aier360.app"
-            BlueprintName = "Aier360"
-            ReferencedContainer = "container:Aier360.xcodeproj">
+            BuildableName = "Aierbon.app"
+            BlueprintName = "Aierbon"
+            ReferencedContainer = "container:Aierbon.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
