删除审核教师

--- a/Aier360/Resources/ControllerName.plist
+++ b/Aier360/Resources/ControllerName.plist
@@ -21,7 +21,7 @@
 	<key>ZXContactsContentViewController</key>
 	<string>联系人子页</string>
 	<key>ZXContactsViewController</key>
-	<string>联系人</string>
+	<string>好友</string>
 	<key>ZXAboutViewController</key>
 	<string>关于</string>
 	<key>ZXFeaturesViewController</key>
@@ -53,13 +53,11 @@
 	<key>ZXClassListViewController</key>
 	<string>班级列表</string>
 	<key>ZXPositionTeacherViewController</key>
-	<string>职务列表</string>
-	<key>ZXTeachersViewController</key>
 	<string>教师列表</string>
+	<key>ZXTeachersViewController</key>
+	<string>组织架构</string>
 	<key>ZXAddAnnouncementViewController</key>
 	<string>发布公告</string>
-	<key>ZXTeacherCheckViewController</key>
-	<string>教师审核</string>
 	<key>ZXAddFoodViewController</key>
 	<string>发布餐饮</string>
 	<key>ZXAnnouncementDetailViewController</key>
@@ -154,5 +152,9 @@
 	<string>聊天消息列表</string>
 	<key>ChatViewController</key>
 	<string>聊天</string>
+	<key>ZXContactsMenuViewController</key>
+	<string>联系人</string>
+	<key>ZXTeacherInfoViewController</key>
+	<string>教师资料</string>
 </dict>
 </plist>
