解决每日餐饮切换闪退的问题

--- a/Aier360/Resources/ControllerName.plist
+++ b/Aier360/Resources/ControllerName.plist
@@ -156,5 +156,15 @@
 	<string>联系人</string>
 	<key>ZXTeacherInfoViewController</key>
 	<string>教师资料</string>
+	<key>ZXClassMultiPickerViewController</key>
+	<string>选择班级</string>
+	<key>ZXAddTeacherViewController</key>
+	<string>添加教师</string>
+	<key>ZXAddStudentViewController</key>
+	<string>添加学生</string>
+	<key>ZXStudentInfoViewController</key>
+	<string>学生信息</string>
+	<key>ZXAddParentViewController</key>
+	<string>添加家长</string>
 </dict>
 </plist>
