修改友盟页码统计

--- a/Aier360/Resources/ControllerName.plist
+++ b/Aier360/Resources/ControllerName.plist
@@ -16,8 +16,6 @@
 	<string>添加宝宝</string>
 	<key>ZXAddContactsViewController</key>
 	<string>添加联系人</string>
-	<key>ZXContactsContentViewController</key>
-	<string>联系人子页</string>
 	<key>ZXContactsViewController</key>
 	<string>好友</string>
 	<key>ZXAboutViewController</key>
@@ -164,5 +162,11 @@
 	<string>学生信息</string>
 	<key>ZXAddParentViewController</key>
 	<string>添加家长</string>
+	<key>ZXFriendRequestViewController</key>
+	<string>新的好友</string>
+	<key>ZXQRCodeViewController</key>
+	<string>扫一扫</string>
+	<key>ZXAddABFriendViewController</key>
+	<string>添加通讯录好友</string>
 </dict>
 </plist>
