修复浏览人数一直为0的bug

--- a/Aier360/Resources/Cities.plist
+++ b/Aier360/Resources/Cities.plist
@@ -478,7 +478,7 @@
 		<key>ctype</key>
 		<integer>10</integer>
 		<key>name</key>
-		<string>陕西省</string>
+		<string>山西省</string>
 		<key>pinA</key>
 		<string>shanxisheng</string>
 		<key>pinAS</key>
@@ -4582,13 +4582,13 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>梧林市</string>
+		<string>梧州市</string>
 		<key>pinA</key>
-		<string>wulinshi</string>
+		<string>wuzhoushi</string>
 		<key>pinAS</key>
-		<string>wu lin shi </string>
+		<string>wu zhou shi </string>
 		<key>pinJ</key>
-		<string>wls</string>
+		<string>wzs</string>
 		<key>subCid</key>
 		<integer>122</integer>
 	</dict>
@@ -6016,24 +6016,6 @@
 	</dict>
 	<dict>
 		<key>cid</key>
-		<integer>440</integer>
-		<key>cstate</key>
-		<integer>10</integer>
-		<key>ctype</key>
-		<integer>20</integer>
-		<key>name</key>
-		<string>那里地区</string>
-		<key>pinA</key>
-		<string>neilidiqu</string>
-		<key>pinAS</key>
-		<string>nei li di qu </string>
-		<key>pinJ</key>
-		<string>nldq</string>
-		<key>subCid</key>
-		<integer>127</integer>
-	</dict>
-	<dict>
-		<key>cid</key>
 		<integer>441</integer>
 		<key>cstate</key>
 		<integer>10</integer>
@@ -6058,7 +6040,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>西安市</string>
+		<string>太原市</string>
 		<key>pinA</key>
 		<string>xianshi</string>
 		<key>pinAS</key>
@@ -6076,7 +6058,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>铜川市</string>
+		<string>大同市</string>
 		<key>pinA</key>
 		<string>tongchuanshi</string>
 		<key>pinAS</key>
@@ -6094,7 +6076,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>宝鸡市</string>
+		<string>阳泉市</string>
 		<key>pinA</key>
 		<string>baojishi</string>
 		<key>pinAS</key>
@@ -6112,7 +6094,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>咸阳市</string>
+		<string>长治市</string>
 		<key>pinA</key>
 		<string>xianyangshi</string>
 		<key>pinAS</key>
@@ -6130,7 +6112,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>渭南市</string>
+		<string>晋城市</string>
 		<key>pinA</key>
 		<string>weinanshi</string>
 		<key>pinAS</key>
@@ -6148,7 +6130,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>延安市</string>
+		<string>朔州市</string>
 		<key>pinA</key>
 		<string>yananshi</string>
 		<key>pinAS</key>
@@ -6166,7 +6148,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>汉中市</string>
+		<string>运城市</string>
 		<key>pinA</key>
 		<string>hanzhongshi</string>
 		<key>pinAS</key>
@@ -6184,7 +6166,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>榆林市</string>
+		<string>忻州市</string>
 		<key>pinA</key>
 		<string>yulinshi</string>
 		<key>pinAS</key>
@@ -6202,7 +6184,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>安康市</string>
+		<string>临汾市</string>
 		<key>pinA</key>
 		<string>ankangshi</string>
 		<key>pinAS</key>
@@ -6220,7 +6202,7 @@
 		<key>ctype</key>
 		<integer>20</integer>
 		<key>name</key>
-		<string>商洛市</string>
+		<string>吕梁市</string>
 		<key>pinA</key>
 		<string>shangluoshi</string>
 		<key>pinAS</key>
@@ -7291,6 +7273,150 @@
 		<string>qsyq</string>
 		<key>subCid</key>
 		<integer>212</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1013</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>30</integer>
+		<key>name</key>
+		<string>溧阳市</string>
+		<key>pinA</key>
+		<string>liyangshi</string>
+		<key>pinAS</key>
+		<string>li yang shi </string>
+		<key>pinJ</key>
+		<string>lys</string>
+		<key>subCid</key>
+		<integer>212</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1015</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>20</integer>
+		<key>name</key>
+		<string>晋中市</string>
+		<key>pinA</key>
+		<string>jinzhongshi</string>
+		<key>pinAS</key>
+		<string>jin zhong shi </string>
+		<key>pinJ</key>
+		<string>jzs</string>
+		<key>subCid</key>
+		<integer>128</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1017</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>30</integer>
+		<key>name</key>
+		<string>宜兴市</string>
+		<key>pinA</key>
+		<string>yixingshi</string>
+		<key>pinAS</key>
+		<string>yi xing shi </string>
+		<key>pinJ</key>
+		<string>yxs</string>
+		<key>subCid</key>
+		<integer>210</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1022</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>30</integer>
+		<key>name</key>
+		<string>金坛市</string>
+		<key>pinA</key>
+		<string>jintanshi</string>
+		<key>pinAS</key>
+		<string>jin tan shi </string>
+		<key>pinJ</key>
+		<string>jts</string>
+		<key>subCid</key>
+		<integer>212</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1036</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>20</integer>
+		<key>name</key>
+		<string>新北市</string>
+		<key>pinA</key>
+		<string>xinbeishi</string>
+		<key>pinAS</key>
+		<string>xin bei shi </string>
+		<key>pinJ</key>
+		<string>xbs</string>
+		<key>subCid</key>
+		<integer>135</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1037</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>20</integer>
+		<key>name</key>
+		<string>桃园市</string>
+		<key>pinA</key>
+		<string>taoyuanshi</string>
+		<key>pinAS</key>
+		<string>tao yuan shi </string>
+		<key>pinJ</key>
+		<string>tys</string>
+		<key>subCid</key>
+		<integer>135</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1041</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>20</integer>
+		<key>name</key>
+		<string>杨凌示范区</string>
+		<key>pinA</key>
+		<string>yanglingshifanqu</string>
+		<key>pinAS</key>
+		<string>yang ling shi fan qu </string>
+		<key>pinJ</key>
+		<string>ylsfq</string>
+		<key>subCid</key>
+		<integer>128</integer>
+	</dict>
+	<dict>
+		<key>cid</key>
+		<integer>1042</integer>
+		<key>cstate</key>
+		<integer>10</integer>
+		<key>ctype</key>
+		<integer>20</integer>
+		<key>name</key>
+		<string>阿里地区</string>
+		<key>pinA</key>
+		<string>alidiqu</string>
+		<key>pinAS</key>
+		<string>a li di qu </string>
+		<key>pinJ</key>
+		<string>aldq</string>
+		<key>subCid</key>
+		<integer>127</integer>
 	</dict>
 </array>
 </plist>
