--- a/Aier360/Support Files/Info.plist
+++ b/Aier360/Support Files/Info.plist
@@ -77,5 +77,9 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>baidumap</string>
+    </array>
 </dict>
 </plist>
