优化短信领取流程

--- a/Aier360/Support Files/Info.plist
+++ b/Aier360/Support Files/Info.plist
@@ -70,6 +70,8 @@
 	</array>
 	<key>UIStatusBarStyle</key>
 	<string>UIStatusBarStyleLightContent</string>
+	<key>CFBundleDisplayName</key>
+	<string>爱儿邦</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
