--- a/Aier360/Support Files/Info.plist
+++ b/Aier360/Support Files/Info.plist
@@ -63,6 +63,7 @@
 	<string>23</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>wechat</string>
 		<string>weixin</string>
 		<string>baidumap</string>
 		<string>alipay</string>
